Solved 2024 day 4 part 1